# AList3SDK

./: .gitignore  .readthedocs.yml  404.html  MANIFEST.in  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  requirements.txt  setup.py  test.py
.github/workflows/: continuous-integration-workflow.yml  doc.yml  pypi.yml  test.yml
alist/: Error.py  __init__.py  download.py  error.py  file.py  folder.py  main.py  model.py  sync.py  utils.py
alist/cli/: __init__.py  _data.py  auth.py
apis/: index.html
apis/error/: index.html
apis/file/: index.html
apis/folder/: index.html
apis/main/: index.html
apis/model/: index.html
apis/sync/: index.html
apis/utils/: index.html
docs/: guide.md  index.md  readme.md
docs/apis/: error.md  file.md  folder.md  index.md  model.md  sync.md  utils.md
docs/guide/: base.md  start.md
examples/: index.html
examples/first/: index.html
readme/: index.html
tests/: test_base.py  test_sync.py  test_utils.py
