[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alist3"
version = "1.3.7"
requires-python = ">=3.9"
description = "AList V3 PythonSDK"
authors = [{ name = "MoYan", email = "moyanjdc@qq.com" }]
license = { text = "LGPL 2.1" }
readme = "readme.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
]
keywords = ["AList", "PythonSDK", "API"]
dependencies = ["aiohttp"]

[tool.setuptools]
packages = { find = { where = ["."] } }
include-package-data = true
license-files = []

[tool.pytest.ini_options]
# 其他配置（匹配测试文件、类、函数名）
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# 默认命令行参数（可选）
addopts = ["-v", "--color=yes"]
